# py-freebsd_sysctl

./: .cirrus.yml  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  deploy-issue-template.md
.github/scripts/: _Changelog.py  changelog.py
.github/workflows/: approve-release-pull-request.yml  main.yml  push-branch.yml  push-master.yml
freebsd_sysctl/: __init__.py  __version__.py  data_types.py  flags.py  libc.py  types.py
sysctl/: __init__.py
tests/: freebsd_sysctl_test.py  sysctl_test.py
