[aliases]
test = pytest

[tool:pytest]
addopts = --verbose

[metadata]
name = freebsd-sysctl
version = attr: freebsd_sysctl.__version__
description = Native Python wrapper for FreeBSD sysctls using libc.
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://github.com/gronke/py-freebsd_sysctl
author = Stefan Grönke
author_email = stefan@gronke.net
python_requires = >=3.6
platforms =
    FreeBSD
license = BSD 2-Clause License
keywords =
    FreeBSD
    sysctl
classifiers =
    License :: OSI Approved :: BSD 2-Clause License
    Operating System :: POSIX :: BSD :: FreeBSD
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed
tests_require =
    pytest-runner
    pytest
    pytest-cov
    pytest-pep8
    pytest-mock
    flake8-docstrings
    flake8-mutable
    flake8-builtins
    flake8-mypy
    bandit==1.5.1
    bandit-high-entropy-string
    sphinx-autodoc-typehints
    sphinx_rtd_theme

[options]
packages = find:
provides = find:

[options.packages.find]
exclude =
    tests

[flake8]
ignore = D100,D101,D102,D103,D104,D105,D106,D107
