[aliases]
test = pytest

[tool:pytest]
addopts = --verbose

[metadata]
name = freebsd-sysctl
version = attr: freebsd_sysctl.__version__
description = Native Python wrapper for FreeBSD sysctls using libc.
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://github.com/gronke/py-freebsd_sysctl
author = Stefan Grönke
author_email = stefan@gronke.net
python_requires = >=3.6
platforms =
    FreeBSD
license = BSD 2-Clause License
classifiers =
    License :: OSI Approved :: BSD 2-Clause License
tests_require =
    pytest-runner
    pytest

[options]
packages = find:

[options.packages.find]
exclude =
    tests
